tests/samples/negative/types/literal_char_invalid_scalar.ax
module literal_char_invalid_scalar;

fn main() -> i32 {
    let value: char = '\u{D800}';
    if value == 'a' {
        return 1;
    }
    return 0;
}
